send one request